--- a/pet/.spacelift/config.yml
+++ b/pet/.spacelift/config.yml
@@ -1,9 +1,9 @@
 version: 1
-module_version: 0.1.8
+module_version: 0.1.9
 
 tests:
   - name: "Default pet test"
     project_root: examples/default
   - name: Failing pet test
     project_root: examples/failing
-    negative: true
+    negative: false
