--- a/pet/.spacelift/config.yml
+++ b/pet/.spacelift/config.yml
@@ -2,7 +2,7 @@ version: 1
 module_version: 0.1.9
 
 tests:
-  - name: "Default pet test"
+  - name: "Default pett test"
     project_root: examples/default
   - name: Failing pet test
     project_root: examples/failing
