--- a/pet/.spacelift/config.yml
+++ b/pet/.spacelift/config.yml
@@ -1,8 +1,8 @@
 version: 1
-module_version: 0.1.11
+module_version: 0.1.12
 
 tests:
-  - name: "Default pett test"
+  - name: "Default peett test"
     project_root: examples/default
   - name: Failing pet test
     project_root: examples/failing
